Linux send() call returns EAGAIN instead of ENOTCONN in case when the socket is non-blocking and connect() is not finished yet.

Initial patch developed by Steven Hartland in 2008 and adopted by me.

PR:		129169
Reported by:	smh@
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@347969 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f